--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
     <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-standalone-preset.js"></script>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css" />
-    <title>TMF622_ProductOrder</title>
+    <title>Church Pro</title>
   </head>
   <body>
     <div id="swagger-ui"></div>
@@ -13,7 +13,7 @@
         const ui = SwaggerUIBundle({
           urls: [
             {
-              name: "Api-v1",
+              name: "Api",
               url: "Api.yaml",
             },
           ],
@@ -27,7 +27,7 @@
       };
     </script>
     <style>
-      .swagger-ui .topbar .download-url-wrapper input[type="text"] {
+/*       .swagger-ui .topbar .download-url-wrapper input[type="text"] {
         border: 2px solid #77889a;
       }
       .swagger-ui .topbar .download-url-wrapper .download-url-button {
@@ -42,7 +42,7 @@
       }
       .swagger-ui .topbar .download-url-wrapper .select-label {
         color: #3b4151;
-      }
+      } */
     </style>
   </body>
 </html>
